--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Habit Tracker</title>
+  <link rel='stylesheet' href='css/globalStyles.css'>
 </head>
 <body>
   <div id='app'></div>
