--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Habit Tracker</title>
-  <link rel='stylesheet' href='css/globalStyles.css'>
+  <link rel='stylesheet' href='globalStyles.css'>
 </head>
 <body>
   <div id='app'></div>
-  <script src='public/bundle.js'></script>
 </body>
 </html>
